# binary-nvim

./: .gitignore  CMakeLists.txt  README.md
include/: binary.h
lua/: binary-nvim.lua
lua/binary/: CMakeLists.txt  binary.c
src/: binary.c
test/: test_hex2num.lua
tests/: CMakeLists.txt  test_binary.c
